# Semi-Supervised-Lesion-Classification

./: .gitignore  Project1.ipynb  README.md  pyproject.toml  ssh_train.sh.example
lesion_classification/: config.py  constants.py  data.py  losses.py  main.py  models.py  trainer.py  utils.py
results/: history.csv
