[project]
name = "semi-supervised-lesion"
version = "0.1.0"
description = "Semi-supervised skin lesion classification using Mean Teacher model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchsummary>=1.5.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "opencv-python>=4.7.0",
    "pillow>=9.5.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "albumentations>=2.0.8",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lesion_classification"]

